(fix): header align left at full display width

--- a/employment/employment.css
+++ b/employment/employment.css
@@ -6,7 +6,6 @@
 
 .header {
     width: 100%;
-    text-align: center;
 }
 
 .navigation {
